2003-09-05  Earnie Boyd  <earnie@users.sf.net>

	* include/w32api.h (_NT5, etc): Reverse the changes of 2003-07-01.
	* include/winbase.h (_NT5, etc): Ditto.
	
2003-09-02  Bart Oldeman  <bartoldeman@users.sourceforge.net>

	* lib/snmpapi.def (LIBRARY) Add library name.
	Remove '\r', throughout.
	* lib/wsnmp32.def: Remove '\r', throughout.
	* lib/igmpagnt.def: Likewise.

2003-08-29  Steve Cleary  <scleary@jerviswebb.com>

	* include/winuser.h (QS_ALLPOSTMESSAGE, QS_RAWINPUT): Add defines.
	(QS_INPUT, QS_ALLINPUT, QS_ALLEVENTS): Adjust by OR'ing	with
	QS_RAWINPUT for _WIN32_WINNT >= 0x0501.
	(MWMO_*): Add flags.

	* include/wincrypt.h (MS_ENHANCED_PROV[AW], MS_STRONG_PROV[AW],
	MS_DEF_RSA_SIG_PROV[AW], MS_DEF_RSA_SCHANNEL_PROV[AW],
	MS_DEF_DSS_PROV[AW], MS_DEF_DSS_DH_PROV[AW], MS_ENH_DSS_DH_PROV[AW],
	MS_DEF_DH_SCHANNEL_PROV[AW], MS_SCARD_PROV[AW]): Add definitions.

2003-08-26  Danny Smith <dannysmith@users.sourceforge.net>

	* lib/test.c: Add vfw.h to includes.
	* include/mmsystem.h: Add #ifndef guard to definition of
	mmioFOURCC macro.
	* include/vfw.h: Protect __OBJC__ from COM declarations.

2003-08-26  Filip Navara  <xnavara@volny.cz>

	* include/vfw.h: New file.

2003-08-26  Filip Navara  <xnavara@volny.cz>

	* include/ddk/winddk.h (RTL_REGISTRY_*): Add defines.
	(IoSetCompletionRoutine): Cast _CompletionRoutine arg to
	PIO_COMPLETION_ROUTINE.

2003-08-26  Danny Smith <dannysmith@users.sourceforge.net>

	* lib/test.c: Add snmp.h, winsnmp.h amd mgmtapi.h to
	includes.

2003-08-26  Filip Navara  <xnavara@volny.cz>

	* include/snmp.h: New file.
	* include/winsnmp.h: New file.
	* include/mgmtapi.h: New file.
	* lib/snmpapi.def: New file.
	* lib/wsnmp32.def: New file.
	* lib/igmpagnt.def: New file.
	* lib/mgmtapi.def (SnmpMgrCtl) Add stub.
	(SnmpMgrGetTrapEx): Ditto.
	(SnmpMgrMIB2Disk): Remove.
	(dbginit): Remove.

2003-08-25  Steven Edwards  <Steven_Ed4153@yahoo.com>

	* include/ddk/ntifs.h: Change all C++ style comments to C.
	* include/GL/gl.h: Ditto.
